Sat Mar 28 22:11:39 CET 2009 Christian Anthon <anthon@kiku.dk>

	* eval.c: delete a debug message and reformat a few things

Thu Mar 26 13:56:00 CET 2009 Christian Anthon <anthon@kiku.dk>

	* gtkboard.c: don't call update_move in board size allocation,
	leads to a hang.

Thu Mar 26 11:48:33 CET 2009 Christian Anthon <anthon@kiku.dk>

	* analysis.c, eval.c, play.c, sgf.c: make hint and cmark features work
	together and fix save match / hint bug report by Michel.

Wed Mar 25 22:30:30 CET 2009 Christian Anthon <anthon@kiku.dk>

	* eval.c, play.c: sort moves according to "back" chequer as a last
	resort in analysis and computer moves to avoid some silly looking
	moves when the game is over, but not resigned yet.

Wed Mar 25 11:48:28 CET 2009 Christian Anthon <anthon@kiku.dk>:

	* gtkboard.c, gtkoptions.c: minor pips/epc display changes

Wed Mar 25 11:05:57 CET 2009 Christian Anthon <anthon@kiku.dk>

	* backgammon.h, eval.c, gtk-multiview.c, gtkgame.h, html.c,
	relational.c: fix minor compiler warnings

Wed Mar 25 00:44:46 CET 2009 Christian Anthon <anthon@kiku.dk>

	* analysis.c, analysis.h, backgammon.h, commands.inc,
	formatgs.c, formatgs.h, gnubg.c, gtkgame.c, html.c, record.c,
	record.h, relational.c, relational.h, text.c: Remove the player
	records (may still be viewed if existing). Add simple stats from the
	relational db to html and text exports

Wed Mar 25 00:39:33 CET 2009 Christian Anthon <anthon@kiku.dk>

	* export.c, gnubg.c, html.c, play.c, sgf.c, text.c: don't create a
	hint move record when we gs!=GAME_PLAYING

Mon Mar 23 09:54:12 CET 2009 Christian Anthon <anthon@kiku.dk>

	* gtkgame.c: gtkcubehint shouldn't be modal either.

Sun Mar 22 23:33:50 CET 2009 Christian Anthon <anthon@kiku.dk>

	* gnubg.c, gtkchequer.c, gtkchequer.h, gtkcube.c, gtkcube.h,
	gtkgame.c, gtkgame.h: only update the annotation when we have
	a move history.
	* matchid.c: sign warning

Sun Mar 22 22:00:17 CET 2009 Christian Anthon <anthon@kiku.dk>
