@@ -1,3 +1,7 @@
+Sat Mar 28 22:16:21 CET 2009 Christian Anthon <anthon@kiku.dk>
+
+	* commands.inc, gnubg.c: fix a few command help strings
+
 Sat Mar 28 22:11:39 CET 2009 Christian Anthon <anthon@kiku.dk>
 
 	* eval.c: delete a debug message and reformat a few things
